--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         }
         function randomize() {
             let images=["cat.jpg", "clover.webp", "diamond.png", "dog.png", 
-                            "fox.png", "panda.jpg", "spade.jpeg", "sun.jpg", 
+                            "fox.png", "panda.jpeg", "spade.jpeg", "sun.jpeg", 
                             "cat.jpg", "clover.webp", "diamond.png", "dog.png", 
-                            "fox.png", "panda.jpg", "spade.jpeg", "sun.jpg"];
+                            "fox.png", "panda.jpeg", "spade.jpeg", "sun.jpeg"];
             let i = 0;
             let finalImages=[];
             while (images.length > 0) {
